--- a/rover/partials/allotments/details/rvAllotmentWarnOverBookingPopup.html
+++ b/rover/partials/allotments/details/rvAllotmentWarnOverBookingPopup.html
@@ -3,6 +3,6 @@
         <button id="modal-close" type="button" ng-click="closeDialog()" class="modal-close"><span class="icons icon-close invert"></span></button>
         <span class="icons icon-popup-alert"></span>
         <span class="message h2">{{ngDialogData.message | translate}}</span>
-        <button type="button" class="button green modal-close" ng-click="closeDialog(); saveRoomBlock(true);">Ok</button>
+        <button type="button" class="button green modal-close" ng-click="closeDialog(); saveRoomBlock(true, undefined, true);">Ok</button>
     </div>
 </div>
