--- a/rover/partials/groups/roomBlock/rvGroupConfirmMassUpdatePopup.html
+++ b/rover/partials/groups/roomBlock/rvGroupConfirmMassUpdatePopup.html
@@ -12,7 +12,7 @@
         </div>
         <div class="actions">
             <button type="button" class="button"
-                ng-click="clickedOnMassUpdateSaveButton(ngDialogData)"
+                ng-click="clickedOnMassUpdateSaveButton(ngDialogData, !!overBookingMessage)"
                 ng-disabled="disableButtons"
                 ng-class="{ 'grey': disableButtons,
                             'green': !disableButtons
