CICO-34109 - commet posted style update

--- a/stylesheets/less/app/screens/10.neighbors.less
+++ b/stylesheets/less/app/screens/10.neighbors.less
@@ -123,6 +123,12 @@
                 &.icon-allotment { color: @allotmentcard; }
                 &.icon-staff-blue { color: @blue; }
             }
+
+            .posted {
+                margin-left: auto;
+                font-size: 13px;
+                text-transform: uppercase;
+            }
         }
 
         .post {
