CICO-35025 adding changes for bypassing the checkin for sent to que

--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckin.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckin.html
@@ -26,7 +26,7 @@
         </div>                   
     </div>
     <!-- main content -->
-    <div class="row" ng-hide="isPosting || netWorkError">
+    <div class="row" ng-hide="isPosting || netWorkError || bypassCheckinVerification">
         <div class="col-md-1"></div>
         <!-- left side -->
         <div class="col-md-4 top-spacing section-container">
