CICO-35025 minor change in zestweb_v2

--- a/guestweb_v2/partials/checkin/gwTermsAndConditions.html
+++ b/guestweb_v2/partials/checkin/gwTermsAndConditions.html
@@ -20,9 +20,12 @@
     </div>
     <div class="row  dual-buttons">
         <div class="col-md-1"></div>
-        <div class="col-md-10">
+        <div class="col-md-4 center-align">
             <a class="btn btn-template" ng-click="agreeClicked()">Agree</a>
-            <a class="btn btn-template mob-margin-top-5 grey-btn pull-right" ng-click="cancelClicked()">Cancel</a>
+        </div>
+        <div class="col-md-2"><br></div>
+        <div class="col-md-4 center-align">
+            <a class="btn btn-template mob-margin-top-5 grey-btn" ng-click="cancelClicked()">Cancel</a>
         </div>
         <div class="col-md-1"></div>
     </div>
