CICO-34008 updates theme loading moves zoku and yotel to css theme files, need to move other themes to css after updating/configuring each theme css

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1406,3 +1406,7 @@ div.move-all-icons{
 .checkBoxContainer{
   padding:0px !important;
 }
+.station-language-entry>div{
+  width: 45.75% !important; 
+}
+
