--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -48,6 +48,12 @@
 			stroke: @white;
 		}
 	}
+    .logo-svg{
+        background-image: url("../css/themes/yotel/logo.svg");
+        background-repeat: no-repeat;
+        width: 239.3px;
+        height: 64.8px;
+    }
 
 /* 3. LAYOUT
 ==========================================================*/
