--- a/zest_station/css/themes/zoku/theme.less
+++ b/zest_station/css/themes/zoku/theme.less
@@ -34,6 +34,16 @@
 		&.icon-create-key,
 		&.icon-no-print { stroke: @white; }
 	}
+
+    .logo-svg{
+        background-image: url("../css/themes/zoku/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 41.33%;
+	    height: 55%;
+	    background-position: center;
+	    margin-top: 5%;
+    }
         section,#main{
             background-image: url('/assets/zest_station/css/themes/zoku/background.png');
             background-size: 75% !important;
