--- a/admin/partials/zestStation/adZestStationCfg.html
+++ b/admin/partials/zestStation/adZestStationCfg.html
@@ -29,7 +29,7 @@
                 <ad-toggle-button is-checked="zestSettings.zest_lang.enabled" label="{{'STATION_LANGUAGE_SUPPORT_SWITCH'| translate}}" div-class=""></ad-toggle-button>
                 <ad-dropdown ng-click="updateDefaultLanguageDropdown()" label="{{'STATION_LANGUAGE_DEFAULT' | translate}}" label-in-drop-down="{{'STATION_LANGUAGE_DEFAULT_PLACEHOLDER' | translate}}" list="enabledLangs" savemodel="zestSettings.zest_lang.default_language" valueproperty="value" property="name" selected-Id='zestSettings.zest_lang.default_language' required='no' selbox-class='placeholder' div-class="{{defaultLangsDivClass}}"></ad-dropdown>
                 <!-- english -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.English" label="{{ 'STATION_LANGUAGE_ENGLISH' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <!-- french -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.French" label="{{ 'STATION_LANGUAGE_FRENCH' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <!-- spanish -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.Spanish" label="{{ 'STATION_LANGUAGE_SPANISH' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <!-- german -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.German" label="{{ 'STATION_LANGUAGE_GERMAN' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <!-- italian -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.Italian" label="{{ 'STATION_LANGUAGE_ITALIAN' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <!-- castelleno -->
-                <div class="entry full-width">
+                <div class="entry full-width station-language-entry">
                     <ad-checkbox ng-click="updateDefaultLanguageDropdown()" is-checked="zestSettings.zest_lang.Castellano" label="{{ 'STATION_LANGUAGE_CASTELLANO' | translate}}"></ad-checkbox>
                     <div class="entry">
                         <div class="file-upload">
