CICO-34967 implementing pagination

--- a/admin/partials/adCheckinEmailSettings/adCheckinEmailSettings.html
+++ b/admin/partials/adCheckinEmailSettings/adCheckinEmailSettings.html
@@ -41,7 +41,7 @@
                                     </a>
                                 </td>
                                 <td data-title="'ROOM TYPE'" sortable="'room_type'" header-class="width-40">
-                                    {{room.room_type}}
+                                    {{room.room_type}} ----{{room.isSelected}}--
                                 </td>
                                 <td header-class="width-10 padding-checkbox" style="text-align: left; " header="'/assets/partials/adCheckinEmailSettings/adTableHeaderCheckBox.html'">
                                     <div class="entry radio-check">
