--- a/rover/partials/nightlyDiary/rvNightlyDiaryFilterbar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryFilterbar.html
@@ -1,5 +1,5 @@
 <div class="diary-nightly-search-form">
-    
+
     <!-- Refresh -->
     <div class="entry reset">
         <button type="button" class="button white with-icon only-icon">
@@ -40,7 +40,7 @@
             </div>
             <div class="list scrollable">
                 <div class="wrapper">
-                    <!-- If reservation has status --> 
+                    <!-- If reservation has status -->
                     <div class="guest"> <!-- Add class 'no-status' if future reservation. Add class 'no-room' if room is not assigned -->
                         <div class="data">
                             <!-- If NOT future reservation, show reservation status:
@@ -50,10 +50,10 @@
                                     {'Lastname Firstname' or 'Pending'}  <!-- Highlight search query like this: <span class="highlight">{Query}</span> -->
                                 </span>
                                 <!-- if returning CO/TA/Group/Allotment match, use on of these (Highlight search query same as above):
-                                <span class="icons icon-guest-company">{Company Name}</span> 
-                                <span class="icons icon-guest-travelagent">{Travel Agent Name}</span> 
-                                <span class="icons icon-guest-group">{Group Name}</span> 
-                                <span class="icons icon-guest-allotment">{allotment Name}</span> 
+                                <span class="icons icon-guest-company">{Company Name}</span>
+                                <span class="icons icon-guest-travelagent">{Travel Agent Name}</span>
+                                <span class="icons icon-guest-group">{Group Name}</span>
+                                <span class="icons icon-guest-allotment">{allotment Name}</span>
                                 -->
                             </div>
                         </div>
@@ -77,7 +77,7 @@
 
     <!-- 7 or 21 Days -->
     <div class="entry switch">
-        <div class="switch-button on"> <!-- Class 'on' is default, it means L75 is checked and we're showing 7 days. Remove it if L75 unckeched, meaning we're showing 21 days -->
+        <div class="switch-button" ng-class="{'on' : isSevenMode}" ng-click="switchMode()"> <!-- Class 'on' is default, it means L75 is checked and we're showing 7 days. Remove it if L75 unckeched, meaning we're showing 21 days -->
             <input value="" type="checkbox" checked>
             <label class="data-off">
                 <span class="value">7 Days</span>
