--- a/admin/partials/paymentMethods/adEditPaymentMethod.html
+++ b/admin/partials/paymentMethods/adEditPaymentMethod.html
@@ -15,7 +15,7 @@
 			<!-- the ad-dropdown directive is using ng-repeat, which
 			    has to be changed to ng-options. Now editing directive will be a bad idea as it may break existing dropdowns.So adding entire tags for dropdown for now
 		     -->
-			<div class='entry full-width'  ng-if="editData.is_cc && editData.allow_cc_processors_per_payment_methods">
+			<div class='entry full-width'  ng-if="editData.is_cc && editData.allow_cc_processors_per_payment_methods && !editData.is_system_defined">
 			  <label>{{'CREDIT_CARD_PROCESSOR' | translate}}</label>
 			  <div class='select'>
 			    <select  ng-options="row.value as row.name for row in data.custom_cc_processors" ng-model="editData.custom_cc_processor_id">
