CICO-34008 updates all logos for zest station headers in all themes, using common css

--- a/zest_station/css/themes/fontainebleau/theme.less
+++ b/zest_station/css/themes/fontainebleau/theme.less
@@ -93,6 +93,16 @@
 		&.icon-oos { fill: @brandColor; }
 	}
 
+    .logo-svg{
+        background-image: url("../css/themes/fontainebleau/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+    	background-position: center;
+    	margin-top: 3%;
+    }
+
 /* 3. LAYOUT
 ==========================================================*/
 
