--- a/zest_station/css/themes/snt/theme.less
+++ b/zest_station/css/themes/snt/theme.less
@@ -112,6 +112,20 @@
                 }
 	}
 
+
+    .logo-svg{
+        background-image: url("../css/themes/snt/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+        height: 60%;
+        background-position: center;
+        margin-top: 2%;
+    }
+
+/* 4. LAYOUT
+==========================================================*/
+
 	.form {
         .entry {
         	input { background-color: @white; }
