--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -51,8 +51,11 @@
     .logo-svg{
         background-image: url("../css/themes/yotel/logo.svg");
         background-repeat: no-repeat;
-        width: 239.3px;
-        height: 64.8px;
+        background-size: contain;
+        width: 100%;
+        height: 59%;
+        background-position: center;
+        margin-top: 2%;
     }
 
 /* 3. LAYOUT
