--- a/zest_station/css/themes/avenue/theme.less
+++ b/zest_station/css/themes/avenue/theme.less
@@ -39,6 +39,16 @@
 		}
 	}
 
+    .logo-svg{
+        background-image: url("../css/themes/avenue/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+	    height: 100%;
+	    background-position: center;
+	    margin-top: 5%;
+    }
+
 /* 4. LAYOUT
 ==========================================================*/
 	
