--- a/zest_station/css/themes/epik/theme.less
+++ b/zest_station/css/themes/epik/theme.less
@@ -37,6 +37,15 @@
 			fill: @white;
 		}
 	}
+    .logo-svg{
+        background-image: url("../css/themes/epik/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+        height: 88.25%;
+    	background-position: center;
+    	margin-top: 0%;
+    }
 
 /* 4. LAYOUT
 ==========================================================*/
