CICO-34967 changing into a directive

--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -239,7 +239,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div ng-include="'/assets/partials/adCheckinEmailSettings/adCheckinEmailSettings.html'"></div>
+                        <ad-filter-table  filter-config="checkinEmailRoomExclusionConfig"></ad-filter-table> 
+                        <!-- <div ng-include="'/assets/partials/adCheckinEmailSettings/adCheckinEmailSettings.html'"></div> -->
                     </div>
                     <!--  -->
                     <div class="form-title half-width-title">
