--- a/rover/partials/reports/shared/summaryCounts.html
+++ b/rover/partials/reports/shared/summaryCounts.html
@@ -143,9 +143,9 @@
 
 <!-- Daily production report -->
 <ul ng-if="isThisReport('DAILY_PRODUCTION_ROOM_TYPE')" class="totals">
-    <li>Forecast Room Revenue<span>{{ summaryCounts.actual_revenue | currency:currencySymbol:2 }}</span></li>
+    <li>Forecast Room Revenue<span>{{ summaryCounts.rate_revenue | currency:currencySymbol:2 }}</span></li>
     <li>ADR<span>{{ summaryCounts.adr | currency:currencySymbol:2 }}</span></li>
-    <li>Actual Room Revenue<span>{{ summaryCounts.rate_revenue | currency:currencySymbol:2 }}</span></li>
+    <li>Actual Room Revenue<span>{{ summaryCounts.actual_revenue | currency:currencySymbol:2 }}</span></li>
 </ul>
 
 <!-- Daily production by demographics -->
