CICO-34592 added the comments controller and template

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -172,12 +172,23 @@
   height : 500px;
   top : 120px !important;
 }
+
+.neighbours-comment-scroll{
+  height : 300px;
+  
+}
+
 .neighbours-post-scroll-error{
   top : 160px !important;
 }
 .neighbours-post-container{
   height : 1750px;
 }
+
+.neighbours-comment-container{
+  height : 800px;
+}
+
 .neighbours-post-container-error{
   height : 1850px !important;
 }
@@ -201,5 +212,12 @@
 }
 .post-delete-dialog-button{
   margin-bottom: 10px;
+}
+
+.conversation-container{
+  width: 100%;
+}
+.conversation-wrapper{
+  height: 100px;
 }
 
