--- a/rover/partials/socialLobby/rvSLPostDelete.html
+++ b/rover/partials/socialLobby/rvSLPostDelete.html
@@ -22,7 +22,7 @@
             Cancel
         </button>
         <button type="button" class="button red edit-data-inline"
-            ng-click="deletePost()">
+            ng-click="delete()">
             Confirm
         </button>
     </div>
