CICO-35263 - Style update

--- a/stylesheets/less/app/screens/04.cards.less
+++ b/stylesheets/less/app/screens/04.cards.less
@@ -1232,7 +1232,7 @@
                         padding: 20px;
 
                         .entry {
-                            width: 440px;
+                            .calc-width(100, 320);
                             .float;
 
                             input,
