CICO-24241: Added filters HTML

--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -5,4 +5,5 @@
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
-<section id="diary-nightly" class="content diary-days-7" role="main"></section>
+<span id="diary-nightly"></span>
+
