--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -30,7 +30,7 @@
 
         <!-- Room Search Results -->
         <!-- Rooms + Reservations. YOU CAN RELOAD THIS WHEN SWITCHING 7 or 21 DAYS, NO NEED TO RELOAD ENTIRE SCREEN.  -->
-        <div id="nightlyDiaryMain"></div>
+        <span id="nightlyDiaryMain"></span>
 
     </div>
 
