--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -29,6 +29,18 @@
         </div>
 
         <!-- Room Search Results -->
+        <div class="grid-room-search-results hidden"> <!-- Add class 'visible' to show -->
+            <div class="wrapper">
+                <div class="room">
+                    <span class="room-number {HK status or 'out' if OOO/OOS}">
+                        {Room No} <!-- Highlight search query like this: <span class="highlight">{Query}</span> -->
+                    </span>
+                    <span class="room-type">{Room Type}</span>
+                </div>
+                ... repeat for every result
+            </div>
+        </div>
+
         <!-- Rooms + Reservations. YOU CAN RELOAD THIS WHEN SWITCHING 7 or 21 DAYS, NO NEED TO RELOAD ENTIRE SCREEN.  -->
         <span id="nightlyDiaryMain"></span>
 
