CICO-35320 Fixed logo size issue

--- a/rover/css/styles_ng_rover.css.less
+++ b/rover/css/styles_ng_rover.css.less
@@ -1363,8 +1363,8 @@ span.keys-msg-bold{
   }
 
   .first-inner-table-image {
-    max-height: 190px;
-    width: 650px;
+    max-height: 180px;
+    width: auto;
   }
 
   .second-inner-table-title {
@@ -1492,11 +1492,6 @@ span.keys-msg-bold{
 .first-inner-table-data {
   width: 610px;
   vertical-align: middle;
-}
-
-.first-inner-table-image {
-  max-height: 190px;
-  width: 650px;
 }
 
 .second-inner-table-title {
