CICO-34790 added date shift and 7/21 modes

--- a/rover/partials/nightlyDiary/rvNightlyDiaryFilterbar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryFilterbar.html
@@ -1,7 +1,7 @@
-<div class="diary-nightly-search-form">
+<div class="diary-nightly-search-form" ng-controller="rvNightlyDiaryFiltersController">
 
     <!-- Refresh -->
-    <div class="entry reset">
+    <div class="entry reset" ng-click="clickedResetButton()">
         <button type="button" class="button white with-icon only-icon">
             <span class="icons icon-reset"></span>
         </button>
@@ -9,14 +9,14 @@
 
     <!-- Set start date -->
     <div class="entry date">
-        <button type="button" class="button white with-icon only-icon">
+        <button type="button" class="button white with-icon only-icon" ng-click="clickedDateLeftShift()">
             <span class="icons icon-double-arrow black"></span>
         </button>
         <div class="entry-data">
             <input type="text" class="datepicker" value="" readonly />
-            <span class="date-range"></span>
+            <span class="date-range">{{ diaryData.fromDate | date: 'd MMM' }} - {{ diaryData.toDate | date: 'd MMM yyyy' }}</span>
         </div>
-        <button type="button" class="button white with-icon only-icon">
+        <button type="button" class="button white with-icon only-icon" ng-click="clickedDateRightShift()">
             <span class="icons icon-double-arrow black rotate-right"></span>
         </button>
     </div>
@@ -77,7 +77,7 @@
 
     <!-- 7 or 21 Days -->
     <div class="entry switch">
-        <div class="switch-button overlay" ng-class="{'on' : diaryData.isSevenMode}" ng-click="toggleSwitchMode()">
+        <div class="switch-button" ng-class="{'on' : diaryData.isSevenMode}" ng-click="toggleSwitchMode()">
             <input value="" type="checkbox" checked>
             <label class="data-off">
                 <span class="value">7 Days</span>
@@ -93,11 +93,11 @@
     <!-- Show / Hide Filters -->
     <div class="entry filters">
         <button type="button" class="button white with-icon only-icon">
-            <span class="count">33</span>
+            <span class="count">{{diaryData.roomFilterCount}}</span>
             <span class="icons icon-filter-room"></span>
         </button>
         <button type="button" class="button white with-icon only-icon">
-            <span class="count">4</span>
+            <span class="count">{{diaryData.filterCount}}</span>
             <span class="icons icon-filter"></span>
         </button>
     </div>
