CICO-34968 guestweb style changes

--- a/guestweb/common_css/park_valkenburg/theme.less
+++ b/guestweb/common_css/park_valkenburg/theme.less
@@ -9,7 +9,7 @@ body{
      background-color: #fff;
 }
 .back-text{
-    color:#fff !important;
+    color:#000 ;
 }
 a,a:hover,.main-text,
 .res-date,
@@ -52,16 +52,16 @@ a,a:hover,.main-text,
     background: #A1B115 !important;
 }
 .light-button,.light-button:hover{
-    background: #af8c0a !important;
+    background: #B2C322 !important;
 }
 .checkouttime1,.checkouttime1:hover{
-    background: #af8c0a;
+    background: #B2C322;
 }
 .checkouttime2,.checkouttime2:hover{
     background: #A1B115;
 }
 .checkouttime3,.checkouttime3:hover{
-    background: #8c6f01;
+    background: #92A10D;
 }
 .no-thanks,.no-thanks:hover{
     color:#000 !important;
@@ -81,7 +81,10 @@ a,a:hover,.main-text,
 .right-arrow-button{
     background-image:url('/assets/guestweb/common_images/black/right_arrow.png'); 
 }
-
+.back-to-checkout {
+    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
+    background-size: 20px;
+    }
 .upgrade-details .upgrades-btn {
     background: #A1B115;
 }
@@ -145,7 +148,7 @@ textarea.sub-text, textarea.sub-text:hover{
   color: #666666;
 }
 .date-picker-header{
-  background-color: #fff;
+  background-color: #A1B115;
 }
 .calendar-back {
   background-image: url('/assets/guestweb/common_images/back_icon.png');
