--- a/rover/partials/socialLobby/rvSLPosts.html
+++ b/rover/partials/socialLobby/rvSLPosts.html
@@ -26,8 +26,8 @@
     <div class="no-content">
         <div class="info">
             <span class="icon-no-content icon-messages"></span>
-            <strong class="h1">No conversations</strong>
-            <span class="h2">Currently there are no conversations in the your Neighborhood</span>
+            <strong class="h1" translate>SL_NO_POST_TITLE</strong>
+            <span class="h2" translate>SL_NO_POST_MESSAGE</span>
         </div>
     </div>
 </section> 
@@ -62,11 +62,12 @@
                             <!-- If not staff member, show Stay Card link -->
 
 
-                            <button type="button" class="button white brand-text small-button" ng-show="post.user_role == 'guest' && post.user.current_reservation_id != null" ng-click="goToStayCard(post.user.current_reservation_id, $event)">Stay Card</button>
+                            <button type="button" class="button white brand-text small-button" ng-show="post.user_role == 'guest' && post.user.current_reservation_id != '' && post.user.current_reservation_id != null" ng-click="goToStayCard(post.user.current_reservation_id, post.user.current_reservation_confirm_no, $event)" translate>SL_STAYCARD_LINK</button>
 
 
                             <!-- If staff member post, output this instad of L64, L66 and L68:-->
                             <em class="icons icon-staff-blue" ng-show="post.user_role != 'guest'">Staff</em> 
+                            <span class="posted">1 min ago</span>
                         </div>
                         <h4 class="post" ng-class="{'staff': post.user_role != 'guest', 'post-with-limit': post.id != selectedPost.id, 'post-full': post.id == selectedPost.id}"> <!-- If this is a 1st level unread post, add class 'unread'. If staff post, add class 'staff'. If entered / left the lobby post, add class 'appearance' -->
                             <!-- If post has replies, show count like this:-->
@@ -92,7 +93,7 @@
 <!-- Post form -->
 <div class="neighbors-form numbers-pagination" > <!-- Add class 'numbers-pagination' if 1st level pagination is showing as well -->
     <input type="text" placeholder="Add comment" ng-model = "newPost" />
-    <button type="button" class="button white soft-red-text" ng-click="addPost();">Post</button>
+    <button type="button" class="button white soft-red-text" ng-click="addPost();" translate>SL_POST_BUTTON</button>
 
     <!-- If showing 1st level pagination, output this -->
     <div class="pages" ng-show="totalPostPages > 1"> <!-- Add class "active" to selected number -->
